--- a/homework.ipynb
+++ b/homework.ipynb
@@ -54,7 +54,7 @@
    },
    "outputs": [],
    "source": [
-    "sheet = pd.read_excel('data/time history data.xlsx')\n",
+    "sheet = pd.read_excel('data')\n",
     "data = sheet.astype('float32').T"
    ]
   },
