--- a/homework.ipynb
+++ b/homework.ipynb
@@ -16,7 +16,6 @@
     "\n",
     "import pandas as pd\n",
     "import numpy as np\n",
-    "import scipy.signal as signal\n",
     "\n",
     "import matplotlib.pyplot as plt\n",
     "from matplotlib import rcParams"
@@ -54,7 +53,7 @@
    },
    "outputs": [],
    "source": [
-    "sheet = pd.read_excel('data/time history data.xlsx')\n",
+    "sheet = pd.read_excel('data')\n",
     "data = sheet.astype('float32').T"
    ]
   },
@@ -225,11 +224,10 @@
    },
    "outputs": [],
    "source": [
-    "def save_csv(file, file_name):\n",
+    "def save_csv(file):\n",
     "    result_folder = 'result'\n",
     "    \n",
     "    result_file_path = os.path.join(result_folder, file_name)\n",
-    "    file.to_csv(result_file_path, index=False)"
    ]
   },
   {
@@ -299,8 +297,8 @@
    },
    "outputs": [],
    "source": [
-    "save_csv(result_df, 'Resonant_frequency_table.csv')\n",
-    "save_csv(result_peak, 'Damping_ratio_calculation_table.csv')"
+    "save_csv(result_df)\n",
+    "save_csv(result_peak)"
    ]
   },
   {
